# cniai

cniai/: .clang-format  .gitignore  CMakeLists.txt  README.md
cniai/cniai_cuda_kernel/: CMakeLists.txt
cniai/cniai_cuda_kernel/cmake/: CniaiCudaKernel.pc.in  CniaiCudaKernelCPack.cmake  CniaiCudaKernelConfig.cmake.in  CniaiCudaKernelConfigVersion.cmake  ide.cmake  utils.cmake
cniai/cniai_cuda_kernel/include/cniai_cuda_kernel/: cuosd.h  imgproc.h  version.h
cniai/cniai_cuda_kernel/src/imgproc/: cvt_color.cu  nv12_to_rgb_resize_pad_norm.cu  rgb_resize.cu  rgb_resize_pad.cu  rgb_resize_pad_norm.cu  warp_perspective.cu
cniai/cniai_cuda_kernel/src/osd/: cuosd.cc  cuosd_kernel.cu  cuosd_kernel.h  cuosd_memory.h
cniai/cniai_cuda_kernel/src/osd/textbackend/: backend.cc  backend.h  pango_cairo.cc  pango_cairo.h  stb.cc  stb.h  stb_truetype.h
cniai/models/: README.md
cniai/pipeline_repository/paddleocr/models/: genarate_engine.sh
cniai/pipeline_repository/yolov5/configs/: open_source.json
cniai/pipeline_repository/yolov5/models/: genarate_engine.sh
cniai/src/: CMakeLists.txt  cniai.cc
cniai/src/common/: assert.h  blocking_queue.h  exception.cc  exception.h  file_util.cc  file_util.h  id.cc  id.h  image_util.cc  image_util.h  json.h  logging.h  str_util.cc  str_util.h  thread_pool.h
cniai/src/nvcodec/: ffmpeg_demuxer.cc  ffmpeg_demuxer.h  ffmpeg_muxer.cc  ffmpeg_muxer.h  ffmpeg_video_source.cc  ffmpeg_video_source.h  frame_queue.cc  frame_queue.h  nv_encoder.cc  nv_encoder.h  nv_encoder_cuda.cc  nv_encoder_cuda.h  nvcodec.h  video_decoder.cc  video_decoder.h  video_parser.cc  video_parser.h  video_reader.cc  video_source.cc  video_source.h  video_writer.cc
cniai/src/nvcommon/: cuda_util.h  frame.h
cniai/src/nvjpeg/: jpeg_decoder.cc  nvjpeg.h  nvjpeg_util.h
cniai/src/pipeline/: corotine_pipeline_processor.h  data_struct.h  pipeline_processor.h  simple_pipeline_processor.h
cniai/src/pipeline/paddleocr/: cls_state.cc  cls_state.h  det_state.cc  det_state.h  paddleocr_pipeline_processor.cc  paddleocr_pipeline_processor.h  postprocess_op.cc  postprocess_op.h  rec_state.cc  rec_state.h
cniai/src/pipeline/yolov5/: yolov5_detect_pipeline_processor.cc  yolov5_detect_pipeline_processor.h  yolov5_detect_state.cc  yolov5_detect_state.h
cniai/src/tensorrt/: buffer_manager.cc  buffer_manager.h  buffers.h  cuda_event.h  cuda_stream.h  executor.cc  executor.h  executor_stat.cc  executor_stat.h  ibuffer.cc  ibuffer.h  itensor.cc  itensor.h  logger.cc  logger.h  memory_counters.cc  memory_counters.h  runtime.cc  runtime.h
cniai/tests/: CMakeLists.txt
cniai/tests/cuda/: CMakeLists.txt  cuda_stream_limit.cc
cniai/tests/cuda_kernel/: CMakeLists.txt  rgb_packed_planar_swap.cc
cniai/tests/nvcodec/: CMakeLists.txt  nvcodec.cc
cniai/tests/nvjpeg/: CMakeLists.txt  jpeg_decoder.cc
cniai/tests/other/: CMakeLists.txt  coroutine.cc  json.cc  log.cc  thread_pool.cc
cniai/tests/pipeline/: CMakeLists.txt  paddleocr.cc  yolov5_detect_video.cc
